--- a/roles/ready-ubuntu/tasks/setup-ssh-pub-key-access.yml
+++ b/roles/ready-ubuntu/tasks/setup-ssh-pub-key-access.yml
@@ -1,7 +1,6 @@
 ### Add pub-key to facts by name
 - name: Get Public Key
   shell: "cat {{ ssh_user_home }}/{{ ssh_key_name }}.pub"
-  become_user: "{{ abm_install_user }}"
   register: key_value
   tags:
   - abm-ssh
@@ -29,11 +28,12 @@
 
 ### Loop pub-key facts and add all of them to {{ ssh_user_home }}/authorized_keys
 - name: Copy authorized_keys to remote
-  become_user: "{{ abm_install_user }}"
   ansible.builtin.copy:
     src: /tmp/ssh-keys
     dest: "{{ ssh_user_home }}/authorized_keys"
     mode: '0500'
+    owner: "{{ abm_install_user }}"
+    group: "users"
   tags:
   - abm-ssh
   - debug-ssh
@@ -54,9 +54,8 @@
 
 ### Test by ssh 10.200.0.x 'echo hi'
 - name: verify SSH access to other machines
-  become_user: "{{ abm_install_user }}"
   command:
-    cmd: ssh {{ machine }} 'echo this-works'
+    cmd: ssh {{abm_install_user}}@{{ machine }} -i {{ ssh_user_home }}/{{ ssh_key_name }} 'echo this-works'
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
