--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -124,7 +124,7 @@
 
 - name: "Setup docker on host machine"
   include: setup-docker-apt.yml
-  when: docker_version.stdout is version('20.9.0', '<')
+  when: ( docker_version.stdout == "" or docker_version.stdout is version('20.9.0', '<') )
   tags:
   - docker
 
