--- a/roles/ready-ubuntu/vars/main.yml
+++ b/roles/ready-ubuntu/vars/main.yml
@@ -8,3 +8,6 @@ ssh_key_name: "abm-key"
 ssh_user_home: "/home/{{ abm_install_user }}/.ssh"
 ssh_key_path: "{{ ssh_user_home }}/{{ ssh_key_name }}"
 ssh_key_path_pub: "{{ ssh_user_home }}/{{ ssh_key_name }}.pub"
+
+# let's get the primary network interface
+prinetint: "{{ ansible_default_ipv4.interface }}"
