--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -118,8 +118,18 @@
     tags:
     - abm-once
     - longhorn-hmac-keys
-    - abm-install  
+    - abm-install
 
+### Create or ensure the /customer folder exists
+###TODO Make this /customer configuration and link to Longhorn config
+  - name: Create the /customer folder if needs
+    ansible.builtin.file:
+      path: /customer
+      state: directory
+      mode: '0755'
+    tags:
+    - abm-install
+    - abm-config
 
 ### Create Local PVC folder (future will be mounted or something)
   - name: Create PVC Folder
