--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -132,70 +132,13 @@
   tags:
   - docker
 
-
-# TODO Do this only for cnucs
-- name: install ops agent
-  script: files/install-agents.sh > /var/log/agent-logs.txt
-  args:
-    creates: /var/log/agent-logs.txt
-  when:
-      - is_cloud_resource is defined
-      - is_cloud_resource == True
-  tags:
-  - ops-agent
-
-#  Do this for physical nucs
- ###  Monitoring agent
- #
-- name: Copy collectd config
-  template:
-    src: collectd.conf.j2
-    dest: "/tmp/collectd.conf"
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - collectd-config
-
-- name: Copy stackdriver initd script
-  template:
-    src: stackdriver-agent.j2
-    dest: "/tmp/stackdriver-agent"
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - stackdriver-initd
-
-- name: install monitoring agent
-  script: files/install-monitoring-agent.sh > /var/log/monitoring-agent-logs.txt
-  args:
-    creates: /var/log/monitoring-agent-logs.txt
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - monitoring-agent
-
- ###  Logging agent
- #
-- name: Copy fluend config
-  template:
-    src: google-fluentd.conf.j2
-    dest: "/tmp/google-fluentd.conf"
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - fluentd-config
-
-- name: Copy fluent initd script
-  template:
-    src: google-fluentd.j2
-    dest: "/tmp/google-fluentd"
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - fluentd-initd
-
-- name: install logging agent
-  script: files/install-logging-agent.sh > /var/log/logging-agent-logs.txt
-  args:
-    creates: /var/log/logging-agent-logs.txt
-  when: is_cloud_resource is undefined or is_cloud_resource == False
-  tags:
-  - logging-agent
+ ### Install Obeservability agents
+ #TODO: Re-enable this later
+# - name: "Setup Obeservability Agents on Physical"
+#   include: setup-google-observability.yml
+#   when: is_cloud_resource is undefined or is_cloud_resource == False
+#   tags:
+#   - observability-setup
 
 - name: "Setup VLAN Interfaces on Physical Hosts"
   include: setup-vlan-interfaces.yml
