--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -22,14 +22,16 @@ enable_application_logging: true
 # Skip preflight checks?
 skip_preflight: false
 
-# Common across all clusters
-pod_cidr: "172.24.0.0/16"
-services_cidr: "10.50.0.0/16"    # avoid overlap with KIND IPs (10.96.0.0/16)
+# Cluster IP Ranges
+pod_cidr: "100.127.0.0/16"
+services_cidr: "192.168.30.0/23"
+
+# Cluster Persistant Volumes (outside of overlay storage options)
 local_pvc_mount: "/opt/pvc-disk"
 local_share_pvc_mount: "/opt/localpv-share" # Default value
-container_runtime: "containerd" # docker or containerd
 
-# NOTE: Cluster-specific variables are in the inventory file
+# Cluster runtime
+container_runtime: "containerd" # docker or containerd
 
 # Service Account Configuration
 service_accounts: [
